--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3IEJJcZ00Gap5dGiDlxLi8Q7w6CXUVs8zhHZcmjX0YU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
